[tool.poetry]
name = "raspi-node-stats"
version = "0.1.0"
description = "Check some stats about the host"
authors = ["Javier Luna Molina <javierlunamolina@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
